--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start":"live-server"  
+    "start":"vercel dev"  
   },
   "keywords": [],
   "author": "",
